infra/kubernetes/00-namespace.yaml
# Copyright (c) 2026 Luis Manuel Cousido Hermida. All rights reserved.
apiVersion: v1
kind: Namespace
metadata: {name: hydra}
